# CyreneBot

./: .gitignore  AGENTS.md  LICENSE  README.md  RULE.md  architecture.md  config.yaml.example  env.example  pyproject.toml  start.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture_proposal.yml  bug_report.yml  feature_request.yml  platform_proposal.yml
.github/scripts/: validate_issue_body.py  validate_pr_body.py
.github/workflows/: ci.yml  issue-gate.yml
examples/plugins/demo_hello/: README.md  main.py  plugin.json
examples/plugins/demo_hello/routers/: basic.py
examples/plugins/proactive_reply_demo/: README.md  main.py  plugin.json
examples/plugins/proactive_reply_demo/proactive_routes/: proactive.py
frontend/: index.html  login.html  vite.config.ts
frontend/src/: api.ts  style.css
frontend/src/components/: AppSidebar.vue  ChatComposer.vue  FeedMessage.vue
frontend/src/composables/: useFeed.ts  useProviders.ts  useSessions.ts
frontend/src/views/: ProvidersView.vue
src/cyreneAI/: __init__.py  bootstrap.py  plugin_api.py
src/cyreneAI/adapters/: README.md
src/cyreneAI/adapters/bot_sessions/: __init__.py
src/cyreneAI/adapters/channels/: __init__.py
src/cyreneAI/adapters/documents/: __init__.py  csv.py  filesystem.py  json.py
src/cyreneAI/adapters/skills/: __init__.py
src/cyreneAI/adapters/tools/: __init__.py  python.py
src/cyreneAI/adapters/vector_stores/: __init__.py
src/cyreneAI/api/: __init__.py  _arguments.py  _depends.py  _executors.py  _replies.py  _routing.py  _types.py  cli.py  plugin.py  testing.py
src/cyreneAI/application/: bootstrap.py  bot_dispatcher.py  bot_orchestrator.py  channel_event_processor.py  channel_webhook_handler.py  chat_orchestrator.py  rag_chat_orchestrator.py  retrieval_orchestrator.py  runtime.py
src/cyreneAI/application/agent/: __init__.py  history.py  orchestrator.py  planner.py  request_builder.py
src/cyreneAI/application/bot/: __init__.py  command_parser.py  (+2 more)
src/cyreneAI/server/: __init__.py  app.py  auth.py  channel_polling.py  channel_websocket.py  config.py  dependencies.py  logging_config.py  main.py  plugin_admin.py  provider_admin.py  schemas.py
src/cyreneAI/tests/: test_anthropic_errors.py  test_anthropic_instance.py  test_anthropic_mapper.py  test_anthropic_minimal.py  test_anthropic_real_chat.py  test_api_cli.py  test_api_executors.py  test_api_testing.py  test_application_agent_history.py  test_application_agent_orchestrator.py  test_application_bootstrap.py  test_application_bot_command_parser.py  test_application_bot_dispatcher.py  test_application_bot_orchestrator.py  test_application_builtin_tools.py  test_application_channel_event_processor.py  test_application_channel_webhook_handler.py  test_application_chat_orchestrator.py  test_application_chat_stream.py  test_application_embedding_orchestrator.py  test_application_image_orchestrator.py  test_application_indexing_orchestrator.py  test_application_memory_tools.py  test_application_plugin_outbox.py  test_application_rag_chat_orchestrator.py  test_application_retrieval_orchestrator.py  test_application_tool_commands.py  test_application_vector_store_orchestrator.py  test_base_errors.py  test_bot_channel_errors.py  test_bot_channel_registrations.py  test_bot_channel_registry.py  test_bot_schema.py  test_bot_session_manager.py  test_builtin_bot_command_plugins.py  test_context_builder.py  test_context_errors.py  test_context_manager.py  test_context_policy.py  test_context_protocol.py  (+94 more)
(+175 files in other folders)
