[project]
name = "CyreneBot"
version = "0.1.0"
description = "A cleanly layered AI bot framework for provider, context, skill, tool, and channel orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "python-dotenv",
    "httpx",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "google-genai",
    "anthropic",
    "sqlalchemy",
    "aiosqlite",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/cyreneAI/tests"]
