
# CyreneAI Plugin SDK

[project]
name = "cyreneai-plugin-sdk"
version = "0.1.1"
description = "Plugin author SDK for CyreneAI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
]

[project.scripts]
cyrene-plugin = "cyreneAI.api.cli:main"

[dependency-groups]
dev = [
    "openai",
    "python-dotenv",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "google-genai",
    "anthropic",
    "sqlalchemy",
    "aiosqlite",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.20",
    "pyright",
    "twine",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "cyreneAI.api*",
    "cyreneAI.core*",
]
exclude = [
    "cyreneAI.adapters*",
    "cyreneAI.application*",
    "cyreneAI.bootstrap*",
    "cyreneAI.infra*",
    "cyreneAI.server*",
    "cyreneAI.tests*",
]

[tool.setuptools.package-data]
"cyreneAI.api" = ["py.typed"]
"cyreneAI.core" = ["py.typed"]

[tool.cyreneAI.plugin_sdk_package]
distribution_name = "cyreneai-plugin-sdk"
package_name = "cyreneAI"
include_packages = [
    "cyreneAI.api*",
    "cyreneAI.core*",
]
exclude_packages = [
    "cyreneAI.adapters*",
    "cyreneAI.application*",
    "cyreneAI.bootstrap*",
    "cyreneAI.infra*",
    "cyreneAI.server*",
    "cyreneAI.tests*",
]
required_files = [
    "README.md",
    "LICENSE",
    "src/cyreneAI/api/py.typed",
    "src/cyreneAI/core/py.typed",
]
forbidden_sdist_paths = [
    ".env",
    ".github",
    ".venv",
    "data",
    "examples",
    "Dockerfile",
    "docker-compose.yml",
    "docker-compose.yaml",
    "frontend",
]

[tool.pytest.ini_options]
testpaths = ["src/cyreneAI/tests"]
pythonpath = ["src"]

[tool.pyright]
include = [
    "src/cyreneAI/api",
    "src/cyreneAI/core",
]
exclude = ["**/__pycache__", ".venv/"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportUnknownVariableType = "warning"
reportMissingTypeStubs = "warning"
